cabal-version:      3.0

name:               zkfold-crypto
version:            0.1.0.0

license:            MIT
license-file:       LICENSE

author:             zkFold team
maintainer:         info@zkfold.io

build-type:         Simple

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
    default-extensions:
      AllowAmbiguousTypes,
      BangPatterns,
      BlockArguments,
      ConstraintKinds,
      DataKinds,
      DeriveGeneric,
      DerivingStrategies,
      DuplicateRecordFields,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      LambdaCase,
      MultiParamTypeClasses,
      NamedFieldPuns,
      NoImplicitPrelude,
      NumericUnderscores,
      OverloadedLabels,
      OverloadedStrings,
      PolyKinds,
      QuasiQuotes,
      RankNTypes,
      RecordWildCards,
      RecursiveDo,
      ScopedTypeVariables,
      TemplateHaskell,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      TypeOperators,
      UndecidableInstances,
      ViewPatterns

library
    import: options
    exposed-modules:
      ZkFold.Crypto.EllipticCurve.Class
      ZkFold.Crypto.FiniteField.Class
      ZkFold.Crypto.Protocol.ARK.BabyHyrax
      ZkFold.Crypto.Protocol.ARK.HyperPlonk
      ZkFold.Crypto.Protocol.ARK.Lasso
      ZkFold.Crypto.Protocol.ARK.Nova
      ZkFold.Crypto.Protocol.ARK.Plonk
      ZkFold.Crypto.Protocol.Commitment.KZG
      ZkFold.Crypto.Protocol.Commitment.Sona
      ZkFold.Crypto.Protocol.PIOP.Multivariate.Plonk
      ZkFold.Crypto.Protocol.PIOP.Univariate.Plonk
    build-depends:
      base                          >= 4.9 && < 5,
    hs-source-dirs: src

test-suite zkfold-crypto-test
    import: options
    type: exitcode-stdio-1.0
    main-is: Main.hs
    ghc-options: -rtsopts
    build-depends:
      base                          >= 4.9 && < 5,
    hs-source-dirs: test