cabal-version:      3.0

name:               zkp-lib
version:            0.1.0.0

license:            MIT
license-file:       LICENSE

author:             zkFold team
maintainer:         info@zkfold.io

build-type:         Simple

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
    default-extensions:
      AllowAmbiguousTypes,
      BangPatterns,
      BlockArguments,
      ConstraintKinds,
      DataKinds,
      DeriveGeneric,
      DerivingStrategies,
      DuplicateRecordFields,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      LambdaCase,
      MultiParamTypeClasses,
      NamedFieldPuns,
      NoImplicitPrelude,
      NumericUnderscores,
      OverloadedLabels,
      OverloadedStrings,
      PolyKinds,
      QuasiQuotes,
      RankNTypes,
      RecordWildCards,
      RecursiveDo,
      ScopedTypeVariables,
      TemplateHaskell,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      TypeOperators,
      UndecidableInstances,
      ViewPatterns

library
    import: options
    exposed-modules:
      ZKLib.Commitment.Polynomial.KZG10
      ZKLib.Commitment.Polynomial.Sona
      ZKLib.Commitment.Polynomial.Sona.BabyHyrax
      ZKLib.Commitment.Polynomial.Sona.Nova
      ZKLib.IOP.Polynomial.HyperPlonk
      ZKLib.IOP.Polynomial.Lasso
      ZKLib.IOP.Polynomial.Plonk
      ZKLib.ZkSNARK.HyperPlonk
      ZKLib.ZkSNARK.Plonk
    build-depends:
      base                          >= 4.9 && < 5,
    hs-source-dirs: src

test-suite zkp-lib-test
    import: options
    type: exitcode-stdio-1.0
    main-is: Main.hs
    ghc-options: -rtsopts
    build-depends:
      base                          >= 4.9 && < 5,
    hs-source-dirs: test