cabal-version:      3.0

name:               symbolic-cardano
version:            0.1.0.0
tested-with:        GHC ==9.6.4
synopsis:           ZkFold Symbolic library for integration with Cardano
homepage:           https://zkfold.io/
category:           Cryptography, DSL, Math, Symbolic Computation
author:             Vladimir Sinyakov, Pavel Sokolov, Vladimir Morozov, Eitan Chatav, Ilya Baryshnikov, Anna Hovanskaya, Evgenii Samodelov, Murat Kasimov, Maxim Churilov
maintainer:         vlasin@zkfold.io
license:            MIT
license-file:       LICENSE
build-type:         Simple

description:
  This package contains the library for integration of the zkFold Symbolic framework with the Cardano blockchain.
  It provides the types and functions for verifying statements about Cardano transactions.

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -O2
      -threaded
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns

common options-exe
    import: options
    ghc-options:
      -rtsopts
    ghc-prof-options:
      -with-rtsopts=-pj

library
    import: options
    exposed-modules:
      ZkFold.Symbolic.Cardano.Wrapper
      ZkFold.Symbolic.Cardano.Contracts.BatchTransfer
      ZkFold.Symbolic.Cardano.Contracts.RandomOracle
      ZkFold.Symbolic.Cardano.Types
      ZkFold.Symbolic.Cardano.Types.Address
      ZkFold.Symbolic.Cardano.Types.Basic
      ZkFold.Symbolic.Cardano.Types.Input
      ZkFold.Symbolic.Cardano.Types.Output
      ZkFold.Symbolic.Cardano.Types.Output.Datum
      ZkFold.Symbolic.Cardano.Types.OutputRef
      ZkFold.Symbolic.Cardano.Types.Transaction
      ZkFold.Symbolic.Cardano.Types.Value
      ZkFold.Symbolic.Cardano.UPLC
      ZkFold.Symbolic.Cardano.UPLC.Builtins
      ZkFold.Symbolic.Cardano.UPLC.Inference
      ZkFold.Symbolic.Cardano.UPLC.Inference.Internal
      ZkFold.Symbolic.Cardano.UPLC.Term
      ZkFold.Symbolic.Cardano.UPLC.Type
    build-depends:
      base                          >= 4.9 && < 5,
      adjunctions                           < 4.5,
      aeson                                 < 2.3,
      base64-bytestring                          ,
      binary                               < 0.11,
      -- TODO: remove `blake2` after refactoring of ZK protocols
      blake2                                < 0.4,
      bytestring                           < 0.12,
      containers                            < 0.7,
      cryptohash-sha256                    < 0.12,
      deepseq                          <= 1.5.0.0,
      distributive                               ,
      lens                                       ,
      mtl                                   < 2.4,
      optics                                < 0.5,
      parallel                          < 3.2.3.0,
      pretty-simple                         < 4.2,
      QuickCheck                           < 2.15,
      random                                < 1.3,
      semialign                             < 1.4,
      semigroups                                 ,
      split                               < 0.2.6,
      symbolic-base                              ,
      -- TODO: remove `swagger2` after moving the related code to `zkfold-prover`
      swagger2                                   ,
      text                                       ,
      tfp                                   < 1.1,
      these                                 < 1.3,
      type-errors                         < 0.2.1,
      vector                               < 0.14,
      vector-binary-instances               < 0.3,
      vector-split                          < 1.1,
    hs-source-dirs: src
