cabal-version:      3.0

name:               symbolic-cardano
version:            0.1.0.0
tested-with:        GHC == 9.12.1
synopsis:           ZkFold Symbolic library for integration with Cardano
homepage:           https://zkfold.io/
category:           Blockchain, Cryptography, DSL, Math, Symbolic Computation
author:             Vladimir Sinyakov, Pavel Sokolov, Vladimir Morozov, Eitan Chatav, Ilya Baryshnikov, Anna Hovanskaya, Evgenii Samodelov, Murat Kasimov, Maxim Churilov
maintainer:         vlasin@zkfold.io
license:            MIT
license-file:       LICENSE
build-type:         Simple

description:
  This package contains the library for integration of the zkFold Symbolic framework with the Cardano blockchain.
  It provides the types and functions for verifying statements about Cardano transactions.

Flag Pedantic
    Description: Enable pedantic build with -Werror
    Manual: True
    Default: False

common options
    default-language: Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wnoncanonical-monad-instances
      -Wpartial-fields
      -Wredundant-constraints
      -Wunused-packages
      -O2
      -threaded
    if flag(pedantic)
      ghc-options:
        -Werror
    default-extensions:
      BangPatterns,
      BinaryLiterals,
      ConstraintKinds,
      DataKinds,
      DefaultSignatures,
      DeriveDataTypeable,
      DeriveFoldable,
      DeriveFunctor,
      DeriveGeneric,
      DeriveTraversable,
      ExistentialQuantification,
      FlexibleContexts,
      FlexibleInstances,
      FunctionalDependencies,
      GADTs,
      GeneralizedNewtypeDeriving,
      InstanceSigs,
      KindSignatures,
      LambdaCase,
      MultiParamTypeClasses,
      MultiWayIf,
      NamedFieldPuns,
      NoImplicitPrelude,
      NoStarIsType,
      NumericUnderscores,
      OverloadedStrings,
      OverloadedLabels,
      PolyKinds,
      RankNTypes,
      RecordWildCards,
      ScopedTypeVariables,
      StandaloneDeriving,
      StandaloneKindSignatures,
      TupleSections,
      TypeApplications,
      TypeFamilies,
      ViewPatterns

common options-exe
    import: options
    ghc-options:
      -rtsopts
    ghc-prof-options:
      -with-rtsopts=-pj

library
    import: options
    exposed-modules:
      ZkFold.Symbolic.Cardano.Wrapper
      ZkFold.Symbolic.Cardano.Contracts.BabelFees
      ZkFold.Symbolic.Cardano.Contracts.BatchTransfer
      ZkFold.Symbolic.Cardano.Contracts.ZkPass
      ZkFold.Symbolic.Cardano.Contracts.RandomOracle
      ZkFold.Symbolic.Cardano.Contracts.SponsoredTx
      ZkFold.Symbolic.Cardano.Contracts.ZkLogin
      ZkFold.Symbolic.Cardano.Types
      ZkFold.Symbolic.Cardano.Types.Address
      ZkFold.Symbolic.Cardano.Types.Basic
      ZkFold.Symbolic.Cardano.Types.Input
      ZkFold.Symbolic.Cardano.Types.Output
      ZkFold.Symbolic.Cardano.Types.Output.Datum
      ZkFold.Symbolic.Cardano.Types.OutputRef
      ZkFold.Symbolic.Cardano.Types.Transaction
      ZkFold.Symbolic.Cardano.Types.Value
    build-depends:
      base                          >= 4.9 && < 5,
      deepseq                                    ,
      containers                            < 0.7,
      constraints                                ,
      semialign                             < 1.4,
      symbolic-base                              ,
    hs-source-dirs: src
